(Refactor) Fix workflow